spring-addons-starter-recaptcha: fix startup and response mapping on Spring Boot 4
Verified with tests (the module had none):

- the application failed to start with the documented properties: the http
  settings had no default and the request factory dereferenced them
  (NullPointerException). They now default to an empty configuration.
- Google's response fields error-codes and challenge_ts were never mapped
  (dash / underscore names), so error codes were always null and checkV3()
  raised a NullPointerException on a failed validation. Worse, Jackson 3 used
  the Lombok all-args constructor and fails on a missing primitive score, so
  any non-success response was unreadable. DTOs now carry @JsonProperty names,
  a nullable score, a never-null error code list and no all-args creator.
- checkV3(): Collectors.joining arguments were in the wrong order (garbled
  message); the submitted token is no longer echoed in exception messages; an
  empty response body raises a ReCaptchaValidationException instead of a
  NullPointerException.
- new checkV3(token, expectedAction) verifies the action the token was
  generated for, as Google recommends.
- the service is a @ConditionalOnMissingBean auto-configured bean (it was a
  @Service imported by the auto-configuration, impossible to override), fails
  fast with an explicit message when secret-key is missing, and builds its
  RestClient from the application's RestClient.Builder when there is one. A
  constructor taking a ready RestClient is added.
- settings: the @Value on siteverify-url resolved a root-level property, not
  the prefixed one (it only worked because binding ran afterwards); replaced by
  a plain default. URL becomes URI, the secret is excluded from toString(), and
  field Javadoc feeds the generated configuration metadata (the hand-written
  metadata had a wrong sourceType and an invalid "jdouble" type).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>